tests/reference/tokens-test_literal-e20c024.stderr
tokenizer error: Leading zeros in decimal integer are not allowed
 --> tests/errors/test_literal.py:2:14
  |
2 |     x: i32 = 0123
  |              ^^^^ 
